--- a/uasz-maintenance-frontend/src/app/pages/dashboard/dashboard.html
+++ b/uasz-maintenance-frontend/src/app/pages/dashboard/dashboard.html
@@ -1,1 +1,14 @@
-<p>dashboard works!</p>
+<div class="dashboard-card">
+  <h1>Tableau de bord</h1>
+  <p>Bienvenue sur la plateforme de gestion de maintenance de l'UASZ.</p>
+
+  <div class="info-box">
+    <h3>Ici on ajoutera :</h3>
+
+    <ul>
+      <li>Statistiques globales sur les pannes et interventions</li>
+      <li>Liste des pannes récentes</li>
+      <li>Cartes par rôle (demandeur / technicien / responsable / superviseur)</li>
+    </ul>
+  </div>
+</div>
