--- a/uasz-maintenance-frontend/src/app/pages/login/login.scss
+++ b/uasz-maintenance-frontend/src/app/pages/login/login.scss
@@ -111,3 +111,15 @@
     font-size: 1.1rem;
   }
 }
+.error-message {
+  margin-top: 1rem;
+  color: #d32f2f;
+  display: flex;
+  align-items: center;
+  gap: 0.4rem;
+  font-size: 0.9rem;
+}
+
+.error-icon {
+  font-size: 18px;
+}
