--- a/uasz-maintenance-frontend/src/styles.scss
+++ b/uasz-maintenance-frontend/src/styles.scss
@@ -23,3 +23,8 @@ body {
 /* GLOBAL STYLES */
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.material-icons {
+  font-size: 20px;
+  vertical-align: middle;
+}
